dando vida ao css

--- a/login/index.html
+++ b/login/index.html
@@ -36,29 +36,33 @@
                 </ul>
             </nav>
 
-            <div>
-                <span>
-                    Usuario
-                </span>
+            <div class="dados">
+                <div>
+                    <span>
+                        Usuario
+                    </span>
 
-                <input type="text">
+                    <input type="text">
+                </div>
+
+                <div>
+                    <span>
+                        Senha
+                    </span>
+
+                    <input type="password">
+                </div>
             </div>
 
-            <div>
-                <span>
-                    Senha
-                </span>
+            <div class="acess">
+                <button class="btn-login">
+                    Login
+                </button>
 
-                <input type="password">
+                <button>
+                    Esqueci minha senha
+                </button>
             </div>
-
-            <button>
-                Login
-            </button>
-
-            <button>
-                Esqueci minha senha
-            </button>
         </section>
     </main>
 </body>
