--- a/register/index.html
+++ b/register/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina de Login</title>
+    <title>Registro</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="./../css/global.css">
-    <link rel="stylesheet" href="./../css/style.css">
+    <link rel="stylesheet" href="./../css/styleregister.css">
 </head>
 
 <body>
@@ -23,13 +23,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="./../login/index.html">
                             Login
                         </a>
                     </li>
 
                     <li>
-                        <a href="./../register/index.html">
+                        <a href="#">
                             Register
                         </a>
                     </li>
@@ -39,7 +39,7 @@
             <div class="dados">
                 <div>
                     <span>
-                        Usuario
+                        Insira seu e-mail
                     </span>
 
                     <input type="text">
@@ -47,7 +47,15 @@
 
                 <div>
                     <span>
-                        Senha
+                        insira sua senha
+                    </span>
+
+                    <input type="password">
+                </div>
+
+                <div>
+                    <span>
+                        Confirme sua senha
                     </span>
 
                     <input type="password">
@@ -56,11 +64,7 @@
 
             <div class="acess">
                 <button class="btn">
-                    Login
-                </button>
-
-                <button>
-                    Esqueci minha senha
+                    Cadastre-se
                 </button>
             </div>
         </section>
